<resources>
    <string name="app_name">Kit</string>

    <!-- Item Display Fragment -->
    <string name="item_display_make_hint">Make</string>
    <string name="item_display_value_hint">Value</string>
    <string name="item_display_date_hint">Acquisition Date</string>
    <string name="item_display_name_hint">Item Name</string>
    <string name="item_display_model_hint">Model</string>
    <string name="item_display_description_hint">Description</string>
    <string name="item_display_comment_hint">Comment</string>
    <string name="item_display_serial_number_hint">Serial Number</string>
    <string name="total_valuation">Total Valuation:</string>
    <string name="submit_button">Submit</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="createAccount">Do you want to create a new account?</string>
    <string name="signOut">Sign Out</string>
    <string name="add_new_tag">Add New Tag</string>
    <string name="add_existing_tags">Add Existing Tags</string>
    <string name="new_tag_hint">Add Tags</string>
    <string name="search_by_keywords">Search by Keywords</string>
    <string name="tag_frag_hint">Tags</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="confirmDelAccount">Are you sure you want to delete your account?</string>
    <string name="delAccMessage">Deleting your account will result in completely removing your account and the details from our database. You will not be able to access your items stored in this account</string>
    <string name="reSignTitle">In order to delete you must re-sign in</string>
    <string name="reSignMessage">Do you want to re-sign in?</string>
    <string name="perms_denied">Without permissions, scanning is unavailable.</string>
</resources>