<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tagFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/tagSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_horizontal_space"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:layout_marginEnd="@dimen/content_horizontal_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.example.kit.TagChipGroup
        android:id="@+id/tagsToAddGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_horizontal_space"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:layout_marginEnd="@dimen/content_horizontal_space"
        android:layout_marginBottom="@dimen/content_vertical_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelector">

    </com.example.kit.TagChipGroup>

    <EditText
        android:id="@+id/newTagName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_horizontal_space"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:layout_marginEnd="@dimen/content_horizontal_space"
        android:ems="10"
        android:hint="@string/new_tag_hint"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:text="@string/add_existing_tags"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_horizontal_space"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:text="@string/add_new_tag"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagSpinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_horizontal_space"
        android:layout_marginTop="@dimen/content_vertical_space"
        android:layout_marginEnd="@dimen/content_horizontal_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTagName" />

</androidx.constraintlayout.widget.ConstraintLayout>
